# Autonomous_driving_simulator

./: .gitignore  .gitmodules  README.md
basic_agent_st/: .gitignore  CMakeLists.txt  main.cc  path.txt  prova.cpp  strarting_point.cc
basic_agent_st/Track/: Fiorano_clothoid.csv  README.md
basic_agent_st/lib/: interfaces_data_structs.h
basic_agent_st/log/: logvars.h  rrt.h  rrt_test.cc
basic_agent_st/log_internal/: Example.csv  data_analysis.m  obs1.fig
basic_agent_st/matlab/: README.md  Test.m  a_opt.m  action_selection.m  evalPrimitiveCoeffs.m  finalOptPosj0.m  finalOptTime.m  finalOptTimeStop.m  finalOptTimeStopj0.m  finalOptTimeVel.m  finalOptTimej0.m  finalOptVel.m  finalOptVelj0.m  j_opt.m  optimal_control.m  pass_primitive.m  pass_primitive_1.m  pass_primitive_def.m  pass_primitivej0.m  primitive_def.m  primitives.prj  range_intersection.m  s_opt.m  stop_primitive.m  stop_primitive_def.m  stop_primitivej0.m  totalCost.m  v_opt.m
basic_agent_st/matlab/Nuova cartella/: def_agent.m  def_pass_primitive_j0.m  def_stop_primitive_j0.m
basic_agent_st/matlab/codegen/lib/primitives/: rtGetInf.h  (+11 more)
basic_agent_st/matlab/matlab agent/: a_opt.m  coef_list.m  def_optimal_control.m  def_pass_primitive.m  def_pass_primitive_j0.m  def_stop_primitive.m  def_stop_primitive_j0.m  final_opt_pos_j0.m  final_opt_time_j0_pass.m  final_opt_time_pass.m  final_opt_time_stop.m  final_opt_time_stop_j0.m  final_opt_vel_j0_pass.m  final_opt_vel_pass.m  j_opt.m  pass_primitive.m  pass_primitive_j0.m  s_opt.m  stop_primitive.m  stop_primitive_j0.m  time_min_vel.m  total_cost.m  v_opt.m
(+64 files in other folders)
